# conflux

./: .cflx.jsonc  .gitignore  .openspec-orchestrator copy 1.jsonc  .openspec-orchestrator copy.jsonc  .openspec-orchestrator-openocde.jsonc  .openspec-orchestrator.claude.jsonc  .openspec-orchestrator.jsonc  .openspec-orchestrator.jsonc.example  .openspec-orchestrator.opencode.jsonc  .openspec-orchestrator.openocde.jsonc  .pre-commit-config.yaml  AGENTS.md  AUDIT_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  FUTURE_WORK.md  Makefile  PARALLEL_REANALYSIS_GAPS.md  README.ja.md  README.md  RELEASE.md  USAGE.md  build.rs  cflx-accept.md  cflx-apply.md  cliff.toml  dist-workspace.toml  openapi.yaml  release.toml
.agents/: .skill-lock.json
.agents/skills/refactor/: SKILL.md  guide.md
.cflx/: acceptance-state.json
.claude/commands/cflx/: apply.md  archive.md  proposal.md
.github/workflows/: ci.yml  release.yml
.opencode/: opencode.jsonc
.opencode/agent/: code.md  spec.md
.opencode/commands/: cflx-accept.md  cflx-apply.md  cflx-archive.md  cflx-proposal.md  cflx-refactor-proposals.md  conflux:acceptance.md  link.sh
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md  suggested_commands.md  task_completion_checklist.md
.wt/: AGENTS.md  setup
dashboard/: .env.development  build.sh  components.json  package-lock.json  package.json  vite.config.js
dashboard/public/: debug-ws.js
dashboard/src/: App.persistence.test.tsx  App.tsx  index.css  main.jsx
dashboard/src/api/: restClient.test.ts  restClient.ts  types.ts  wsClient.ts
dashboard/src/components/: AddProjectDialog.tsx  ChangeRow.test.tsx  ChangeRow.tsx  ChangesDrawer.tsx  ChangesPanel.tsx  ChatInput.tsx  ChatMessageList.tsx  CloseSessionDialog.tsx  CreateWorktreeDialog.tsx  DeleteDialog.tsx  DeleteWorktreeDialog.tsx  ElicitationDialog.test.tsx  ElicitationDialog.tsx  FileViewPanel.tsx  Header.tsx  LogEntry.test.tsx  LogEntry.tsx  LogsPanel.test.tsx  LogsPanel.tsx  OverviewDashboard.tsx  ProjectCard.test.tsx  ProjectCard.tsx  ProjectsPanel.tsx  ProposalActions.tsx  (+9 more)
docs/: openapi.yaml  parallel-orchestration-integration.md  test-coverage-mapping.md  web-api.openapi.yaml
docs/audit/: EXECUTION_PATHS.md  IMPLEMENTATION_SUMMARY.md  ORDER_TO_GROUP_IMPACT.md
docs/guides/: DEVELOPMENT.md  RELEASE.md  USAGE.md
openspec/: AGENTS.md  project.md
openspec-archive/merge-wait-does-not-stop-orchestration/: proposal.md
openspec-archive/remove-cli-openspec-flags/: tasks.md
openspec/specs/: update-archive-merge-guards-design.md  update-archive-merge-guards-proposal.md
reports/: parallel_refactor.md
scripts/: bump.sh  init_skill.py  package_skill.py  release.sh  test-time-top10.sh
skills/: README.md  cflx-config.skill  cflx-proposal.skill  cflx-workflow.skill  refactor
skills/cflx-config/: SKILL.md
skills/cflx-proposal/: SKILL.md
skills/cflx-run/: SKILL.md  cflx-run.skill
skills/cflx-workflow/: SKILL.md
skills/shared/: cflx_spec_promotion.py
skills/tests/: conftest.py  test_cflx_list_ignores_invalid_change_dirs.py  test_cflx_proposal_change_types.py  test_cflx_spec_promotion.py  test_cflx_workflow_no_delta_marker.py  test_spec_only_acceptance.py
src/: acceptance.rs  agent.rs  agent.rs.backup  agent.rs.bak2  agent.rs.bak3  ai_command_runner.rs  analyzer.rs  analyzer.rs.bak  approval.rs  cli.rs  command_queue.rs  config.rs  embedded_skills.rs  error.rs  error_history.rs  events.rs  git_commands.rs  git_workspace.rs  history.rs  hooks.rs  install_skills.rs  jj_commands.rs  jj_workspace.rs  lib.rs  main.rs  merge_stall_monitor.rs  opencode.rs  openspec.rs  orchestrator.rs  orchestrator.rs.bak  parallel_executor.rs  parallel_run_service.rs  permission.rs  process_manager.rs  progress.rs  serial_run_service.rs  shell_command.rs  spec_delta.rs  spec_test_annotations.rs  stall.rs  (+8 more)
src/agent/: history_ops.rs  mod.rs  output.rs  prompt.rs  runner.rs  tests.rs
src/config/: defaults.rs  expand.rs  jsonc.rs  load.rs  mod.rs  types.rs
src/execution/: apply.rs  archive.rs  archive.rs.bak  mod.rs  state.rs  types.rs
src/orchestration/: acceptance.rs  apply.rs  archive.rs  hooks.rs  mod.rs  output.rs  rejection.rs  selection.rs  state.rs
src/parallel/: acceptance_state.rs  builder.rs  cleanup.rs  conflict.rs  conflict.rs.bak  dispatch.rs  dynamic_queue.rs  events.rs  executor.rs  executor.rs.bak4  merge.rs  mod.rs  mod.rs.backup  mod.rs.bak2  mod.rs.bak3  mod.rs.bak4  mod.rs.bak5  mod.rs.bak6  orchestration.rs  orchestration_adapter.rs  output_bridge.rs  queue_state.rs  types.rs  workspace.rs
src/remote/: client.rs  mapper.rs  mod.rs  test_helpers.rs  types.rs  ws.rs
src/server/: acp_client.rs  active_commands.rs  api.rs  db.rs  mod.rs  opencode_client.rs  proposal_session.rs  registry.rs  runner.rs  terminal.rs
src/service/: mod.rs
src/tui/: README.md  command_handlers.rs  events.rs  key_handlers.rs  log_deduplicator.rs  mod.rs  orchestrator.rs  orchestrator.rs.bak  parallel_event_bridge.rs  qr.rs  queue.rs  render.rs  runner.rs  runner.rs.bak  state.rs  terminal.rs  type_impls.rs  types.rs  utils.rs  worktree_helpers.rs
src/vcs/: commands.rs  mod.rs
src/web/: api.rs  mod.rs  state.rs  url.rs  websocket.rs
tests/: e2e_git_worktree_tests.rs  e2e_proposal_session.rs  e2e_tests.rs  event_sink_integration.rs  install_skills_test.rs  merge_conflict_check_tests.rs  no_backup_files_test.rs  opencode_command_validation.rs  process_cleanup_test.rs  ralph_compatibility.rs  run_exit_tests.rs  spec_delta_tests.rs
tests/fixtures/: mock_acp_agent.py  mock_opencode_server.py
tests/support/: shared_test_support.rs
web/: app.js  index.html  style.css
(+2824 files in other folders)
