[package]
name = "openspec-orchestrator"
version = "0.1.0"
edition = "2021"

[features]
default = []
web-monitoring = ["axum", "tower", "tower-http"]

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
tokio-util = "0.7"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.18"
ratatui = "0.30"
tui-textarea = "0.7"
crossterm = "0.28"
chrono = "0.4"
dirs = "6"
libc = "0.2"
unicode-width = "0.2"
regex = "1.12.2"
md5 = "0.8"
tempfile = "3"
async-trait = "0.1"
shlex = "1.3"

# Web monitoring dependencies (optional)
axum = { version = "0.8", features = ["ws"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
