[package]
name = "conflux"
version = "0.4.13"
edition = "2021"

[[bin]]
name = "cflx"
path = "src/main.rs"

[features]
default = ["web-monitoring"]
web-monitoring = ["axum", "tower", "tower-http", "qrcode", "local-ip-address"]

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
tokio-util = "0.7"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.18"
ratatui = "0.30"
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
libc = "0.2"
unicode-width = "0.2"
unicode-normalization = "0.1"
regex = "1.12.2"
md5 = "0.8"
tempfile = "3"
async-trait = "0.1"
shlex = "1.3"
rand = "0.8"

# Web monitoring dependencies (optional)
axum = { version = "0.8", features = ["ws"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
qrcode = { version = "0.14", optional = true }
local-ip-address = { version = "0.6", optional = true }

# Process management dependencies (platform-specific)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_JobObjects", "Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }

[build-dependencies]
chrono = "0.4"
