[package]
name = "cflx"
version = "0.5.106"
edition = "2021"
default-run = "cflx"
description = "Conflux – a spec-driven parallel coding orchestrator that runs AI agents on git worktrees"
license = "MIT"
repository = "https://github.com/tumf/conflux"
homepage = "https://github.com/tumf/conflux"
documentation = "https://github.com/tumf/conflux#readme"
keywords = ["ai", "codegen", "orchestration", "git", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
  ".agents/**",
  ".claude/**",
  ".codex/**",
  ".github/**",
  ".leann/**",
  ".opencode/**",
  ".serena/**",
  ".tldrignore",
  ".wt/**",
  ".pre-commit-config.yaml",
  ".node-version",
  ".setup-completed",
  "docs/**",
  "openspec/**",
  "reports/**",
  "scripts/**",
  "skills/*.skill",
  "skills/README.md",
  "release.toml",
  "dist-workspace.toml",
  "AGENTS.md",
  "CLAUDE.md",
  "README.ja.md",
]

[lib]
name = "conflux"
path = "src/lib.rs"

[[bin]]
name = "cflx"
path = "src/main.rs"

[[bin]]
name = "openapi-gen"
path = "src/bin/openapi_gen.rs"
required-features = ["web-monitoring"]

[features]
default = ["web-monitoring"]
web-monitoring = ["axum", "tower", "tower-http", "qrcode", "local-ip-address", "utoipa", "utoipa-swagger-ui", "portable-pty", "rusqlite"]
heavy-tests = []

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
tokio-util = "0.7"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.18"
ratatui = "0.30"
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
libc = "0.2"
unicode-width = "0.2"
unicode-normalization = "0.1"
regex = "1.12.2"
md5 = "0.8"
tempfile = "3"
async-trait = "0.1"
shlex = "1.3"
rand = "0.8"
agent-skills-rs = "0.3.1"

# Remote TUI client dependencies
# Use rustls to avoid OpenSSL/native-tls issues in cross-compilation.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Web monitoring dependencies (optional)
axum = { version = "0.8", features = ["ws"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
qrcode = { version = "0.14", optional = true }
local-ip-address = { version = "0.6", optional = true }
utoipa = { version = "5", features = ["axum_extras", "chrono"], optional = true }
utoipa-swagger-ui = { version = "8", features = ["axum"], optional = true }

# Terminal session dependencies (optional, tied to web-monitoring)
portable-pty = { version = "0.8", optional = true }
rusqlite = { version = "0.34", features = ["bundled"], optional = true }

# Process management dependencies (platform-specific)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_JobObjects", "Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }

[build-dependencies]
chrono = "0.4"
